[gd_scene load_steps=18 format=3 uid="uid://8utpemkphlv3"]

[ext_resource type="Script" path="res://Player/UIElements/UI.gd" id="2_2x1jd"]
[ext_resource type="Texture2D" uid="uid://bbjokg8hdj8w2" path="res://UIIcons/PauseMenu/Skull Icon.png" id="10_vele3"]
[ext_resource type="Texture2D" uid="uid://clp0owhq7d8w5" path="res://UIIcons/PauseMenu/pause.png" id="11_052gq"]
[ext_resource type="Script" path="res://Player/UIElements/Pause Menu.gd" id="11_j6slm"]
[ext_resource type="Texture2D" uid="uid://dvruq2pgbgwrf" path="res://UIIcons/Death Menu/Respawn at Bed.png" id="11_wfr0s"]
[ext_resource type="Texture2D" uid="uid://cobn4ywnij4u" path="res://UIIcons/PauseMenu/resume.png" id="12_5hcsw"]
[ext_resource type="Texture2D" uid="uid://dary7vj7seng0" path="res://UIIcons/PauseMenu/options.png" id="12_41sdt"]
[ext_resource type="Texture2D" uid="uid://c1dxuyyok17sc" path="res://UIIcons/Death Menu/Menu Icon.png" id="12_lnemp"]
[ext_resource type="Texture2D" uid="uid://h0e0vk48y0su" path="res://UIIcons/Death Menu/Exit.png" id="13_4315q"]
[ext_resource type="Script" path="res://Player/UIElements/DeathScreen.gd" id="14_6n1s1"]
[ext_resource type="Texture2D" uid="uid://dnviyycrqh6d" path="res://UIIcons/GameplayElements/HealthBarEmpty.png" id="14_13uhb"]
[ext_resource type="Texture2D" uid="uid://c5lqlbhvlioj8" path="res://UIIcons/PauseMenu/save.png" id="14_jsr20"]
[ext_resource type="Texture2D" uid="uid://bcb4c3v28i84y" path="res://UIIcons/GameplayElements/HealthBar.png" id="15_3y7sw"]
[ext_resource type="Texture2D" uid="uid://bky7dwx3dfrsv" path="res://UIIcons/PauseMenu/Exit.png" id="15_he56w"]
[ext_resource type="Texture2D" uid="uid://dysaohiiuvsj5" path="res://UIIcons/GameplayElements/crosshair.png" id="18_av6hk"]

[sub_resource type="CameraTexture" id="CameraTexture_8oo08"]
camera_feed_id = 1

[sub_resource type="SystemFont" id="SystemFont_gd6vl"]
font_names = PackedStringArray("Helvetica")
hinting = 2
subpixel_positioning = 0
msdf_pixel_range = 22
oversampling = 1.0

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 5.0
offset_right = -2.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_2x1jd")

[node name="TabContainer" type="TabContainer" parent="." groups=["Inventory"]]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -348.0
offset_top = -260.0
offset_right = 348.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" type="Panel" parent="TabContainer" groups=["Inventory"]]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Categories" type="TabContainer" parent="TabContainer/Inventory" groups=["Inventory"]]
layout_mode = 0
offset_right = 695.0
offset_bottom = 490.0
metadata/_edit_lock_ = true

[node name="All" type="ItemList" parent="TabContainer/Inventory/Categories" groups=["Inventory"]]
layout_mode = 2
theme_override_font_sizes/font_size = 12
allow_rmb_select = true
auto_height = true
text_overrun_behavior = 0
max_columns = 10
same_column_width = true
fixed_column_width = 69
icon_mode = 0
fixed_icon_size = Vector2i(48, 48)
metadata/_edit_lock_ = true

[node name="Food" type="ItemList" parent="TabContainer/Inventory/Categories" groups=["Inventory"]]
visible = false
layout_mode = 2
auto_height = true
text_overrun_behavior = 0
max_columns = 10
fixed_column_width = 84
icon_mode = 0
fixed_icon_size = Vector2i(64, 64)
metadata/_edit_lock_ = true

[node name="Weapons" type="ItemList" parent="TabContainer/Inventory/Categories" groups=["Inventory"]]
visible = false
layout_mode = 2
auto_height = true
text_overrun_behavior = 0
max_columns = 10
fixed_column_width = 84
icon_mode = 0
fixed_icon_size = Vector2i(64, 64)
metadata/_edit_lock_ = true

[node name="Resources" type="ItemList" parent="TabContainer/Inventory/Categories" groups=["Inventory"]]
visible = false
layout_mode = 2
auto_height = true
text_overrun_behavior = 0
max_columns = 10
fixed_column_width = 84
icon_mode = 0
fixed_icon_size = Vector2i(64, 64)
metadata/_edit_lock_ = true

[node name="Clothing" type="ItemList" parent="TabContainer/Inventory/Categories" groups=["Inventory"]]
visible = false
layout_mode = 2
max_columns = 10
metadata/_edit_lock_ = true

[node name="Junk" type="ItemList" parent="TabContainer/Inventory/Categories" groups=["Inventory"]]
visible = false
layout_mode = 2
auto_height = true
text_overrun_behavior = 0
max_columns = 10
fixed_column_width = 84
icon_mode = 0
fixed_icon_size = Vector2i(64, 64)
metadata/_edit_lock_ = true

[node name="Encumberance" type="Label" parent="TabContainer/Inventory" groups=["Inventory"]]
layout_mode = 2
offset_left = 5.0
offset_top = 462.0
offset_right = 125.0
offset_bottom = 488.0
text = "Encumberance:"

[node name="Stats" type="Panel" parent="TabContainer" groups=["Inventory"]]
visible = false
layout_mode = 2

[node name="ItemList" type="ItemList" parent="TabContainer/Stats" groups=["Inventory"]]
layout_mode = 0
offset_left = 12.0
offset_top = 16.0
offset_right = 684.0
offset_bottom = 479.0
auto_height = true
text_overrun_behavior = 0
max_columns = 4
fixed_column_width = 84
icon_mode = 0
fixed_icon_size = Vector2i(64, 64)

[node name="TextureRect" type="TextureRect" parent="TabContainer/Stats" groups=["Inventory"]]
layout_mode = 0
offset_left = 28.0
offset_top = 31.0
offset_right = 233.0
offset_bottom = 447.0
texture = SubResource("CameraTexture_8oo08")

[node name="Suicide" type="TextureButton" parent="."]
process_mode = 3
visible = false
layout_mode = 0
offset_left = 36.0
offset_top = 2.0
offset_right = 92.0
offset_bottom = 61.0
texture_normal = ExtResource("10_vele3")
ignore_texture_size = true
stretch_mode = 0

[node name="Pause Menu" type="ItemList" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -114.0
offset_right = 137.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = SubResource("SystemFont_gd6vl")
theme_override_font_sizes/font_size = 19
auto_height = true
item_count = 5
fixed_icon_size = Vector2i(40, 40)
item_0/text = "PAUSED"
item_0/icon = ExtResource("11_052gq")
item_0/selectable = false
item_0/disabled = true
item_1/text = "Resume Game"
item_1/icon = ExtResource("12_5hcsw")
item_2/text = "Options"
item_2/icon = ExtResource("12_41sdt")
item_3/text = "Save/Load"
item_3/icon = ExtResource("14_jsr20")
item_4/text = "Exit to Main Menu"
item_4/icon = ExtResource("15_he56w")
script = ExtResource("11_j6slm")

[node name="Overencumbered" type="Label" parent="." groups=["Inventory"]]
visible = false
layout_mode = 0
offset_left = 402.0
offset_top = 655.0
offset_right = 874.0
offset_bottom = 681.0
text = "You are overencumbered, your walk speed has been reduced"

[node name="PickupPrompt" type="Label" parent="." groups=["Inventory"]]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.394271
anchor_top = 0.475463
anchor_right = 0.605729
anchor_bottom = 0.524537
offset_top = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Insert PROMPT Here"
horizontal_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="Crosshair" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_top = -14.0
offset_right = 12.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("18_av6hk")
expand_mode = 1
stretch_mode = 4

[node name="DeathScreen" type="ItemList" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -65.5
offset_right = 108.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
item_count = 3
same_column_width = true
fixed_icon_size = Vector2i(32, 32)
item_0/text = "Respawn at your bed"
item_0/icon = ExtResource("11_wfr0s")
item_1/text = "Exit to Main Menu"
item_1/icon = ExtResource("12_lnemp")
item_2/text = "Quit Game"
item_2/icon = ExtResource("13_4315q")
script = ExtResource("14_6n1s1")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.5
offset_top = -140.0
offset_right = 226.5
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "You were killed by:"

[node name="Exit" type="Button" parent="."]
process_mode = 3
visible = false
y_sort_enabled = true
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.0
offset_top = -165.0
offset_right = -287.0
offset_bottom = -134.0
grow_horizontal = 2
grow_vertical = 2
text = "X"

[node name="SaveLoad" type="TabContainer" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -198.0
offset_right = 280.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1

[node name="Save" type="VBoxContainer" parent="SaveLoad"]
layout_mode = 2

[node name="SaveName" type="TextEdit" parent="SaveLoad/Save"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/background_color = Color(0.396078, 0.396078, 0.396078, 1)
text = "SaveName"
placeholder_text = "Name of your Save Game
"
draw_spaces = true
scroll_fit_content_height = true

[node name="Save" type="Button" parent="SaveLoad/Save"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
size_flags_stretch_ratio = 0.86
text = "Save"
alignment = 0

[node name="ScrollContainer" type="ScrollContainer" parent="SaveLoad/Save"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0

[node name="SaveList" type="ItemList" parent="SaveLoad/Save/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true
fixed_icon_size = Vector2i(128, 128)

[node name="Load" type="ItemList" parent="SaveLoad"]
visible = false
layout_mode = 2

[node name="QuickBar" type="Panel" parent="." groups=["StatusBar"]]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -252.0
offset_top = -62.0
offset_right = 252.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(252, 14.5)

[node name="VBoxContainer" type="VBoxContainer" parent="QuickBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="Healthbar" type="TextureProgressBar" parent="QuickBar/VBoxContainer"]
custom_minimum_size = Vector2(0, 7)
layout_mode = 2
size_flags_vertical = 0
step = 0.1
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("14_13uhb")
texture_progress = ExtResource("15_3y7sw")
tint_progress = Color(1, 0.34902, 0.34902, 1)

[node name="Staminabar" type="TextureProgressBar" parent="QuickBar/VBoxContainer"]
custom_minimum_size = Vector2(0, 7)
layout_mode = 2
size_flags_vertical = 0
step = 0.01
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("14_13uhb")
texture_progress = ExtResource("15_3y7sw")
tint_progress = Color(0, 1, 0, 1)

[node name="Connect" type="Button" parent="."]
process_mode = 3
visible = false
layout_mode = 0
offset_left = 815.0
offset_top = 13.0
offset_right = 954.0
offset_bottom = 61.0
text = "CONNECT"

[node name="Host" type="Button" parent="."]
process_mode = 3
visible = false
layout_mode = 0
offset_left = 961.0
offset_top = 13.0
offset_right = 1100.0
offset_bottom = 61.0
text = "Host"

[node name="IPBOX" type="TextEdit" parent="."]
process_mode = 3
visible = false
layout_mode = 0
offset_left = 135.0
offset_top = 13.0
offset_right = 621.0
offset_bottom = 59.0
placeholder_text = "IP"

[node name="PORT" type="TextEdit" parent="."]
process_mode = 3
visible = false
layout_mode = 0
offset_left = 633.0
offset_top = 13.0
offset_right = 745.0
offset_bottom = 59.0
placeholder_text = "PORT"

[node name="Debug" type="RichTextLabel" parent="."]
layout_mode = 1
offset_right = 216.0
offset_bottom = 292.0

[connection signal="tab_changed" from="TabContainer/Inventory/Categories" to="TabContainer/Inventory/Categories" method="_on_tab_changed"]
[connection signal="item_activated" from="TabContainer/Inventory/Categories/All" to="TabContainer/Inventory/Categories" method="_on_item_activated"]
[connection signal="item_activated" from="TabContainer/Inventory/Categories/Food" to="TabContainer/Inventory/Categories" method="_on_item_activated"]
[connection signal="item_activated" from="TabContainer/Inventory/Categories/Weapons" to="TabContainer/Inventory/Categories" method="_on_item_activated"]
[connection signal="item_activated" from="TabContainer/Inventory/Categories/Resources" to="TabContainer/Inventory/Categories" method="_on_item_activated"]
[connection signal="item_activated" from="TabContainer/Inventory/Categories/Clothing" to="TabContainer/Inventory/Categories" method="_on_item_activated"]
[connection signal="item_activated" from="TabContainer/Inventory/Categories/Junk" to="TabContainer/Inventory/Categories" method="_on_item_activated"]
[connection signal="pressed" from="Suicide" to="Pause Menu" method="_on_suicide_pressed"]
[connection signal="gamePause" from="Pause Menu" to="." method="_on_pause_menu_game_pause"]
[connection signal="item_activated" from="Pause Menu" to="Pause Menu" method="_on_item_activated"]
[connection signal="item_activated" from="DeathScreen" to="DeathScreen" method="_on_item_activated"]
[connection signal="playerRespawn" from="DeathScreen" to="." method="_on_death_screen_player_respawn"]
[connection signal="pressed" from="Exit" to="Pause Menu" method="_on_exit_pressed"]
[connection signal="pressed" from="Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
